More IntelliJ quickfixes